--- a/Server/config.json
+++ b/Server/config.json
@@ -3,6 +3,8 @@
     "sql": {
         "host": "127.0.0.1",
         "port": 3306,
-        "database": "code_analyze"
+        "database": "code_analyze",
+        "user": "root",
+        "password": ""
     }
 }
