--- a/Server/config.json
+++ b/Server/config.json
@@ -4,7 +4,7 @@
         "host": "127.0.0.1",
         "port": 3306,
         "database": "code_analyze",
-        "user": "root",
-        "password": ""
+        "user": "domi",
+        "password": "domi1234"
     }
 }
